# fedora-ai-os

./: FEDORA AI OS AGENTIC FLOW.txt  FEDORA AI OS COMPREHENSIVE v4.txt  FEDORA AI OS v4 0 ACTIONABLE.txt  README.md
code/implementation/phase0/: deployment_workflow.py  main.py  podman_workflow.py  production_readiness_suite.py  recoverable_workflow.py  test_01_split_brain.py  test_02_compensation_cascade.py  test_03_atomic_failure.py  test_04_time_jump.py  test_05_zombie_management.py  test_06_backup_recovery.py  v2_engine.py  v2_package_workflow.py  v2_stress_test.py  v3_engine.py  (+1 more)
docs/built/: FEDORA AI OS EXPERIMENTAL.txt  The recoverable environment 2.0.txt
docs/proposals/: ANALYSIS coreos ai helpers.txt  deepseek.txt  fedora_ai_osv3.txt
implementation_code/phase0/: v3_engine.py
implementation_code/phase1/mcp-gateway/: config.yaml  pyproject.toml
implementation_code/phase1/mcp-gateway/mcp_gateway/: cli.py  config.py  parser.py  server.py
implementation_code/phase1/mcp-gateway/tests/: test_config.py  test_parser.py
project_state/: AGENT_REGISTRY.md  ARCHITECTURAL_DRIFT_REPORT.md  ARCHITECTURAL_SIGNIFICANCE_INDEX.md  ARCHITECTURE_INDEX.md  CONTROL_PLANE_VS_DATA_PLANE.md  CRITICAL_PATH.md  CURRENT_STATE.md  ENVIRONMENT_LIFECYCLE.md  ENVIRONMENT_PROFILE_ARCHITECTURE_UPDATE.md  ENVIRONMENT_REGISTRY.md  FUTURE_VISION.md  KNOWLEDGE_INFRASTRUCTURE.md  MARKETPLACE.md  NEXT_ACTIONS.md  PROJECT_MEMORY_RECONCILIATION_REPORT.md  RHEL_ECOSYSTEM_INTEGRATION.md  ROADMAP.md
roles/: JATIN_ROLE.txt  KAPIL_ROLE.txt  LAKSHAY_BHARTI_ROLE.txt  OJASVI_ROLE.txt
(+52 files in other folders)
